feat: 거래내역 uuid 추가
