# src/main/kotlin/com/bos/backend/presentation/transaction/dto/RelationshipSummaryDTO.kt
@@ -13,4 +13,5 @@ data class RelationshipSummaryDTO(
     val totalAmount: Long,
     val upcomingTransactionInfo: UpcomingTransactionInfoDTO?,
     val transactionId: Long,
+    val transactionUuid: String,
 )
